--- a/code/40_dgp_try47.Rmd
+++ b/code/40_dgp_try47.Rmd
@@ -539,9 +539,8 @@ write.csv(summ_grid, file = here::here(paste0("results/summ_grid_", dt, ".csv"))
 
 ##4 FULL-FACTORIAL ANOVA (RQ answers)
 
-```{r aov_type3_pes}
-
-aov_type3_pes <- function(formula, data) {
+```{r tidy_aov_type3}
+tidy_aov_type3 <- function(model) {
   # Needed packages
   if (!requireNamespace("car", quietly = TRUE)) {
     stop("Please install the 'car' package for Type III SS.")
@@ -549,43 +548,53 @@ aov_type3_pes <- function(formula, data) {
   if (!requireNamespace("dplyr", quietly = TRUE)) {
     stop("Please install the 'dplyr' package.")
   }
-  
-  # Fit the model
-  model <- aov(formula, data = data)
-  
+
   # Type III ANOVA table
   a3 <- car::Anova(model, type = 3)
+
   # Convert to data frame
   tab <- as.data.frame(a3)
   tab$term <- rownames(tab)
   rownames(tab) <- NULL
+
+  # Ensure standard column names
+  # car::Anova usually gives: "Sum Sq", "Df", "F value", "Pr(>F)"
   # Compute Mean Sq
   tab$`Mean Sq` <- tab$`Sum Sq` / tab$Df
-  # Identify residual/error row
+
+  # Identify residual/error row (often "Residuals" or "(Residuals)")
   error_row <- grepl("Residual", tab$term, ignore.case = TRUE)
   ss_error  <- tab$`Sum Sq`[error_row]
-  # Compute partial eta squared
+
+  # Compute partial eta squared: SS_effect / (SS_effect + SS_error)
   tab$pes <- ifelse(
     !error_row,
     tab$`Sum Sq` / (tab$`Sum Sq` + ss_error),
     NA_real_
   )
+
   # Apply rounding rules
   tab_out <- tab |>
     dplyr::mutate(
       `Sum Sq`  = round(`Sum Sq`, 2),
       `Mean Sq` = round(`Mean Sq`, 2),
       `F value` = ifelse(!is.na(`F value`), round(`F value`, 2), NA_real_),
+
+      # p-values: 3 decimals with <.001 rule
       `Pr(>F)` = dplyr::case_when(
         is.na(`Pr(>F)`) ~ NA_character_,
         `Pr(>F)` < 0.001 ~ "<.001",
         TRUE ~ sprintf("%.3f", round(`Pr(>F)`, 3))
       ),
+
+      # partial eta squared: 3 decimals
       pes = ifelse(!is.na(pes), round(pes, 3), NA_real_)
     ) |>
     dplyr::select(term, Df, `Sum Sq`, `Mean Sq`, `F value`, `Pr(>F)`, pes)
+
   tab_out
 }
+
 
 ```
 
@@ -623,10 +632,6 @@ saveRDS(all_df_gamma, file = here::here(paste0("results/all_df_gamma_", dt, ".RD
 write.csv(all_df_gamma, file = here::here(paste0("results/all_df_gamma_", dt, ".csv")), row.names = FALSE)
 
 # A) factorial ANOVA on gamma bias (rep-level)
-aov_bias <- aov_type3_pes(
-  bias ~ treatment * n * prop_extreme * magnitude_level, data = all_df_gamma,
-  data = all_df_gamma
-)
 aov_gamma_bias <- aov(bias ~ treatment * n * prop_extreme * magnitude_level, data = all_df_gamma)
 summary(aov_gamma_bias)
 
@@ -642,7 +647,7 @@ write.csv(
 summ_grid_gamma <- summ_grid |> filter(model=="gamma")
 aov_gamma_emp_se <- aov(
 	emp_se ~ treatment * n * prop_extreme * magnitude_level, data = summ_grid_gamma )
-
+summary(aov_gamma_emp_se) 
 eta_squared(aov_gamma_emp_se, partial=TRUE, type=3) # for partial eta squared (or general?)
 
 tidy_aov_empse_t3 <- tidy_aov_type3(aov_gamma_emp_se)
