both aov fns to compare. Will remove 1

--- a/code/40_dgp_try47.Rmd
+++ b/code/40_dgp_try47.Rmd
@@ -539,7 +539,7 @@ write.csv(summ_grid, file = here::here(paste0("results/summ_grid_", dt, ".csv"))
 
 ##4 FULL-FACTORIAL ANOVA (RQ answers)
 
-```{r tidy_aov_type3}
+```{r fns_aov_type3}
 tidy_aov_type3 <- function(model) {
   # Needed packages
   if (!requireNamespace("car", quietly = TRUE)) {
@@ -595,6 +595,52 @@ tidy_aov_type3 <- function(model) {
   tab_out
 }
 
+tidy_aov_type3_v2 <- function(formula, data) {
+  # Needed packages
+  if (!requireNamespace("car", quietly = TRUE)) {
+    stop("Please install the 'car' package for Type III SS.")
+  }
+  if (!requireNamespace("dplyr", quietly = TRUE)) {
+    stop("Please install the 'dplyr' package.")
+  }
+  
+  # Fit the model
+  model <- aov(formula, data = data)
+  
+  # Type III ANOVA table
+  a3 <- car::Anova(model, type = 3)
+  # Convert to data frame
+  tab <- as.data.frame(a3)
+  tab$term <- rownames(tab)
+  rownames(tab) <- NULL
+  # Compute Mean Sq
+  tab$`Mean Sq` <- tab$`Sum Sq` / tab$Df
+  # Identify residual/error row
+  error_row <- grepl("Residual", tab$term, ignore.case = TRUE)
+  ss_error  <- tab$`Sum Sq`[error_row]
+  # Compute partial eta squared
+  tab$pes <- ifelse(
+    !error_row,
+    tab$`Sum Sq` / (tab$`Sum Sq` + ss_error),
+    NA_real_
+  )
+  # Apply rounding rules
+  tab_out <- tab |>
+    dplyr::mutate(
+      `Sum Sq`  = round(`Sum Sq`, 2),
+      `Mean Sq` = round(`Mean Sq`, 2),
+      `F value` = ifelse(!is.na(`F value`), round(`F value`, 2), NA_real_),
+      `Pr(>F)` = dplyr::case_when(
+        is.na(`Pr(>F)`) ~ NA_character_,
+        `Pr(>F)` < 0.001 ~ "<.001",
+        TRUE ~ sprintf("%.3f", round(`Pr(>F)`, 3))
+      ),
+      pes = ifelse(!is.na(pes), round(pes, 3), NA_real_)
+    ) |>
+    dplyr::select(term, Df, `Sum Sq`, `Mean Sq`, `F value`, `Pr(>F)`, pes)
+  tab_out
+}
+
 
 ```
 
@@ -633,6 +679,13 @@ write.csv(all_df_gamma, file = here::here(paste0("results/all_df_gamma_", dt, ".
 
 # A) factorial ANOVA on gamma bias (rep-level)
 aov_gamma_bias <- aov(bias ~ treatment * n * prop_extreme * magnitude_level, data = all_df_gamma)
+aov_bias_v1 <- tidy_aov_type3(aov_gamma_bias)
+
+aov_bias_v2 <- tidy_aov_type3_v2(
+  bias ~ treatment * n * prop_extreme * magnitude_level, 
+  data = all_df_gamma
+)
+
 summary(aov_gamma_bias)
 
 aov_bias_t3 <- tidy_aov_type3(aov_gamma_bias)
