--- a/code/40_dgp_try47.Rmd
+++ b/code/40_dgp_try47.Rmd
@@ -36,6 +36,13 @@ dt <- lubridate::today()
 dir.create("results", showWarnings = FALSE)
 dir.create("figures", showWarnings = FALSE)
 
+# Save csv and RDS to results directory
+fn_save_results <- function(df) {
+  name <- deparse(substitute(df))
+  saveRDS(df, here::here(paste0("results/",name,"_",dt, ".RDS")))
+  write.csv(df,here::here(paste0("results/",name,"_",dt, ".csv")))
+}
+
 ```
 
 
@@ -209,7 +216,8 @@ safe_gamma_fit <- function(dat) {
 
 ```
 
-#3b) Effect size helper:
+#3b) Effect size helper for ATT  
+
 ```{r es_helper}
 compute_sd_ref <- function(dat, ref = c("control_pre", "pooled_pre", "control_all")) {
 
@@ -496,14 +504,18 @@ all_df <- furrr::future_pmap_dfr(
 )
 
 # Save raw simulation output
-saveRDS(all_df, file = here::here(paste0("results/all_df_", dt, ".RDS")))
-write.csv(all_df, file = here::here(paste0("results/all_df_", dt, ".csv")))
+fn_save_results(all_df)
 
-```
+```  
+
+```{r}
+# If needed, can re-enter all_df
+all_df <- readRDS(here::here("results/all_df_2026-02-06.RDS"))
+```  
 
 
 #Summarise results (includes ATT effect size columns)
-```{r}
+```{r summ_grid}
 summ_grid <- all_df %>%
   group_by(model, n, prop_extreme, magnitude_level, treatment) %>%
   summarise(
@@ -530,8 +542,7 @@ summ_grid <- all_df %>%
 
 print(summ_grid)
 
-saveRDS(summ_grid, file = here::here(paste0("results/summ_grid_", dt, ".RDS")))
-write.csv(summ_grid, file = here::here(paste0("results/summ_grid_", dt, ".csv")), row.names = FALSE)
+fn_save_results(summ_grid)
 
 ```  
 ######  IF CLEAN IN 41_results.Rmd, remove below this line #################
@@ -539,63 +550,8 @@ write.csv(summ_grid, file = here::here(paste0("results/summ_grid_", dt, ".csv"))
 
 ##4 FULL-FACTORIAL ANOVA (RQ answers)
 
-```{r fns_aov_type3}
-tidy_aov_type3 <- function(model) {
-  # Needed packages
-  if (!requireNamespace("car", quietly = TRUE)) {
-    stop("Please install the 'car' package for Type III SS.")
-  }
-  if (!requireNamespace("dplyr", quietly = TRUE)) {
-    stop("Please install the 'dplyr' package.")
-  }
-
-  # Type III ANOVA table
-  a3 <- car::Anova(model, type = 3)
-
-  # Convert to data frame
-  tab <- as.data.frame(a3)
-  tab$term <- rownames(tab)
-  rownames(tab) <- NULL
-
-  # Ensure standard column names
-  # car::Anova usually gives: "Sum Sq", "Df", "F value", "Pr(>F)"
-  # Compute Mean Sq
-  tab$`Mean Sq` <- tab$`Sum Sq` / tab$Df
-
-  # Identify residual/error row (often "Residuals" or "(Residuals)")
-  error_row <- grepl("Residual", tab$term, ignore.case = TRUE)
-  ss_error  <- tab$`Sum Sq`[error_row]
-
-  # Compute partial eta squared: SS_effect / (SS_effect + SS_error)
-  tab$pes <- ifelse(
-    !error_row,
-    tab$`Sum Sq` / (tab$`Sum Sq` + ss_error),
-    NA_real_
-  )
-
-  # Apply rounding rules
-  tab_out <- tab |>
-    dplyr::mutate(
-      `Sum Sq`  = round(`Sum Sq`, 2),
-      `Mean Sq` = round(`Mean Sq`, 2),
-      `F value` = ifelse(!is.na(`F value`), round(`F value`, 2), NA_real_),
-
-      # p-values: 3 decimals with <.001 rule
-      `Pr(>F)` = dplyr::case_when(
-        is.na(`Pr(>F)`) ~ NA_character_,
-        `Pr(>F)` < 0.001 ~ "<.001",
-        TRUE ~ sprintf("%.3f", round(`Pr(>F)`, 3))
-      ),
-
-      # partial eta squared: 3 decimals
-      pes = ifelse(!is.na(pes), round(pes, 3), NA_real_)
-    ) |>
-    dplyr::select(term, Df, `Sum Sq`, `Mean Sq`, `F value`, `Pr(>F)`, pes)
-
-  tab_out
-}
-
-tidy_aov_type3_v2 <- function(formula, data) {
+```{r fn_aov_type3}
+aov_type3_pes <- function(formula, data) {
   # Needed packages
   if (!requireNamespace("car", quietly = TRUE)) {
     stop("Please install the 'car' package for Type III SS.")
@@ -632,10 +588,15 @@ tidy_aov_type3_v2 <- function(formula, data) {
       `F value` = ifelse(!is.na(`F value`), round(`F value`, 2), NA_real_),
       `Pr(>F)` = dplyr::case_when(
         is.na(`Pr(>F)`) ~ NA_character_,
-        `Pr(>F)` < 0.001 ~ "<.001",
+        round(`Pr(>F)`, 3) < 0.001 ~ "<.001",
         TRUE ~ sprintf("%.3f", round(`Pr(>F)`, 3))
       ),
-      pes = ifelse(!is.na(pes), round(pes, 3), NA_real_)
+      # partial eta squared: 3 decimals with <.001 rule
+      pes = dplyr::case_when(
+        is.na(pes) ~ NA_character_,
+        round(pes, 3) < 0.001 & pes > 0 ~ "<.001",
+        TRUE ~ sprintf("%.3f", round(pes, 3))
+      )
     ) |>
     dplyr::select(term, Df, `Sum Sq`, `Mean Sq`, `F value`, `Pr(>F)`, pes)
   tab_out
@@ -657,12 +618,22 @@ tidy_aov_type3_v2 <- function(formula, data) {
 #                        as.numeric((est - 1.96*se <= true) & (true <= est + 1.96*se)))
 #   )
 
+cov_fail <- all_df |> filter(model == "gamma", is.na(est) | is.na(se) | is.na(true))
+
 # --- Build replicate-level coverage indicator for the Gamma model ---
-all_df_gamma <- all_df %>%
+all_df_gamma_w_fails <- all_df %>%
+  # I keep forgetting it's *2 for total observations, make this to remember
+  mutate(nobs = n*2) |> 
+  # remove the ones for ATT: 
+  select(-c(d_est, d_true, d_bias)) |> 
+  # get nobs by n: 
+  relocate(nobs, .after=n) |> 
   dplyr::filter(model == "gamma") %>%
   dplyr::mutate(
     cover_ind = dplyr::if_else(
-      is.na(est) | is.na(se) | is.na(true),
+      # is.na(est) | is.na(se) | is.na(true),
+      # KW re ^^ did he mean bias??
+      is.na(est) | is.na(se) | is.na(bias),
       NA_real_,
       as.numeric((est - 1.96*se <= true) & (true <= est + 1.96*se))
     ),
@@ -671,50 +642,70 @@ all_df_gamma <- all_df %>%
     prop_extreme = as.factor(prop_extreme),
     magnitude_level = as.factor(magnitude_level),
     treatment = forcats::fct_relevel(treatment, "raw","topcode","mean_adj","median_adj","truncate")
-  ) %>%
-  dplyr::filter(!is.na(cover_ind))    # drop reps where fits failed
+  ) 
 
-saveRDS(all_df_gamma, file = here::here(paste0("results/all_df_gamma_", dt, ".RDS")))
-write.csv(all_df_gamma, file = here::here(paste0("results/all_df_gamma_", dt, ".csv")), row.names = FALSE)
+# Inspect where cover_ind failed:
+all_df_gamma_fails <- all_df_gamma_w_fails |> 
+  filter(is.na(cover_ind)) 
+
+all_df_gamma_fails_tbl <- all_df_gamma_fails |> 
+  group_by(treatment, nobs, prop_extreme, magnitude_level) |> 
+  summarise(n = n()) |> 
+  ungroup() |> 
+  mutate(prop_of_500 = n/500)
+
+summ_gamma <- summ_grid %>%
+  dplyr::filter(model == "gamma") %>%
+  dplyr::mutate(
+    treatment = forcats::fct_relevel(
+      treatment, "raw", "topcode", "mean_adj", "median_adj", "truncate"
+    ),
+    # so I don't forget the actual obs was n*2: 
+    nobs = n*2
+  )  |> 
+  relocate(nobs, .after=n)
+
+
+# Used for modeling: 
+all_df_gamma <- all_df_gamma_w_fails |> 
+  dplyr::filter(!is.na(cover_ind))
+
+fn_save_results(all_df_gamma)
 
 # A) factorial ANOVA on gamma bias (rep-level)
-aov_gamma_bias <- aov(bias ~ treatment * n * prop_extreme * magnitude_level, data = all_df_gamma)
-aov_bias_v1 <- tidy_aov_type3(aov_gamma_bias)
-
-aov_bias_v2 <- tidy_aov_type3_v2(
+aov_bias_t3_pes <- aov_type3_pes(
   bias ~ treatment * n * prop_extreme * magnitude_level, 
   data = all_df_gamma
 )
 
-summary(aov_gamma_bias)
+fn_save_results(aov_bias_t3_pes)
 
-aov_bias_t3 <- tidy_aov_type3(aov_gamma_bias)
-
-write.csv(
-  aov_bias_t3,
-  here::here(paste0("results/aov_bias_t3_", dt, ".csv")))
-
-#eta_squared(aov_gamma_bias, partial=TRUE) # for partial eta squared (or general?)
 
 # B) factorial ANOVA on gamma emp SE  (vs model SE, bc emp SE is the SD of the 500 est's of the coefficient, not the average of the model SE's, right?)
-summ_grid_gamma <- summ_grid |> filter(model=="gamma")
-aov_gamma_emp_se <- aov(
-	emp_se ~ treatment * n * prop_extreme * magnitude_level, data = summ_grid_gamma )
-summary(aov_gamma_emp_se) 
-eta_squared(aov_gamma_emp_se, partial=TRUE, type=3) # for partial eta squared (or general?)
 
-tidy_aov_empse_t3 <- tidy_aov_type3(aov_gamma_emp_se)
+fn_save_results(summ_grid_gamma)
 
-write.csv(
-  tidy_aov_empse_t3,
-  here::here(paste0("results/tidy_aov_empse_t3_", dt, ".csv")))
+aov_empse_t3_pes <- aov_type3_pes(
+  emp_se ~ treatment * n * prop_extreme * magnitude_level, 
+  data = summ_grid_gamma )
+
+fn_save_results(aov_empse_t3_pes)
 
 # C) coverage: scenario-level proportion (recommended)
-# cov_grid <- all_df_gamma %>%
-#   group_by(treatment, n, prop_extreme, magnitude_level) %>%
-#   summarise(coverage = mean(cover_ind, na.rm = TRUE), .groups = "drop")
-# 
-# aov_gamma_cov <- aov(coverage ~ treatment * n * prop_extreme * magnitude_level, data = cov_grid)
+cov_grid <- all_df_gamma %>%
+  group_by(treatment, n, prop_extreme, magnitude_level) %>%
+  summarise(coverage = mean(cover_ind, na.rm = TRUE), .groups = "drop")
+
+fn_save_results(cov_grid)
+
+## Ask about this
+aov_cov_scenario <- aov_type3_pes(
+  coverage ~ treatment * n * prop_extreme * magnitude_level, 
+  data = cov_grid
+)
+
+aov_gamma_cov <- aov(coverage ~ treatment * n * prop_extreme * magnitude_level, data = cov_grid)
+aov_gamma_cov_t3 <- car::Anova(aov_gamma_cov, type = 3)
 # summary(aov_gamma_cov)
 # eta_squared(aov_gamma_cov, partial=TRUE) 
 
@@ -722,15 +713,13 @@ write.csv(
 
 
 # --- Full factorial at replicate level now has residual df (many reps per cell) ---
-aov_gamma_cov_rep <- aov(
+aov_cov_t3_pes <- aov_type3_pes(
   cover_ind ~ treatment * n * prop_extreme * magnitude_level,
   data = all_df_gamma
-)
+  )
 
-# Sanity check: residual df should be > 0
-summary(aov_gamma_cov_rep)[[1]]["Residuals","Df"]
+fn_save_results(aov_cov_t3_pes)
 
-eta_squared(aov_gamma_cov_rep, partial=TRUE) 
 
 # ---- ATT (RQ4): ATT_hat, ATT_bias, and effect size across treatments ----
 all_df_att <- all_df %>%
@@ -742,34 +731,38 @@ all_df_att <- all_df %>%
     treatment = factor(treatment)
   )
 
-# ATT_hat across conditions
-aov_att_hat <- aov(est ~ treatment * n * prop_extreme * magnitude_level, data = all_df_att)
-summary(aov_att_hat)
+# ATT_hat across conditions (ignore the pes part)
+aov_att_hat_t3 <- aov_type3_pes(
+  est ~ treatment * n * prop_extreme * magnitude_level, 
+  data = all_df_att
+)
+fn_save_results(aov_att_hat_t3)
 
 # ATT_bias across conditions (recommended DV)
-aov_att_bias <- aov(bias ~ treatment * n * prop_extreme * magnitude_level, data = all_df_att)
-summary(aov_att_bias)
+aov_att_bias_t3 <- aov_type3_pes(
+  bias ~ treatment * n * prop_extreme * magnitude_level, 
+  data = all_df_att
+)
+fn_save_results(aov_att_bias_t3)
 
-# Effect size (d_est) across conditions (optional but usually helpful)
-aov_att_d <- aov(d_est ~ treatment * n * prop_extreme * magnitude_level, data = all_df_att)
-summary(aov_att_d)
+
+# # Effect size (d_est) across conditions (optional but usually helpful)
+# aov_att_d <- aov(d_est ~ treatment * n * prop_extreme * magnitude_level, data = all_df_att)
+# summary(aov_att_d)
 
 # Save ANOVA-ready datasets
-write.csv(all_df_att, file = here::here(paste0("results/all_df_att_", dt, ".csv")), row.names = FALSE)
-write.csv(cov_grid,   file = here::here(paste0("results/cov_grid_", dt, ".csv")), row.names = FALSE)
+fn_save_results(all_df_att)
+fn_save_results(cov_grid)
 
 ```  
 
 
 ```{r descr}
 # Focus on the Gamma Part-2 interaction (can switch to "ATT" later)
-summ_gamma <- summ_grid %>%
-  dplyr::filter(model == "gamma") %>%
-  dplyr::mutate(
-    treatment = forcats::fct_relevel(
-      treatment, "raw", "topcode", "mean_adj", "median_adj", "truncate"
-    )
-  )  
+
+
+fn_save_results(summ_grid)
+fn_save_results(summ_grid_gamma)
 
 # ---- Bias (overall) ----
 # mean_bias is average SIGNED bias; preserves direction of estimator's errors, where neg is systematic underestimation and positive is systematic overestimation and opposing signs are going to cancel each other out. 
